--- a/templates/manager/index.html.twig
+++ b/templates/manager/index.html.twig
@@ -18,7 +18,10 @@
             <tr>
                 <td>{{ student.firstName }}</td>
                 <td>{{ student.lastName }}</td>
-                <td><a href="{{ path('manager_academic_transcript', { studentId: student.id }) }}">Syntèse de résultats</a></td>
+                <td>
+                    <a href="{{ path('manager_student_marks', { studentId: student.id }) }}">Consulter les résultats</a>
+                    <a href="{{ path('manager_academic_transcript', { studentId: student.id }) }}">Syntèse de résultats</a>
+                </td>
             </tr>
         {% else %}
             Aucun étudiant trouvé
