--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
         <div class="navbar navbar-default navbar-static-top" role="navigation">
             <div class="container">
                 <div class="navbar-header col-md-3 col-lg-3">
-                    <a class="navbar-brand" href="">
+                    <a class="navbar-brand" href="{{ path('manager_index') }}">
                         Gestionnaire de notes
                     </a>
 
