--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4,3 +4,7 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 
 // the ~ allows you to reference things in node_modules
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+.domain {
+  font-weight: bold;
+}
