--- a/templates/manager/mark_form.html.twig
+++ b/templates/manager/mark_form.html.twig
@@ -39,6 +39,15 @@
             {{ form_widget(form.value) }}
         </div>
 
+        <div class="form-group {% if not form.inAcademicTranscript.vars.valid %}has-error{% endif %}">
+            {{ form_label(form.inAcademicTranscript, 'Compte dans la synthèse de résultats') }}
+
+            {# Render any errors for the "content" field (e.g. when a class property constraint failed) #}
+            {{ form_errors(form.inAcademicTranscript) }}
+
+            {{ form_widget(form.inAcademicTranscript) }}
+        </div>
+
         <div class="form-group">
             <button class="btn btn-primary pull-right" type="submit">
                 <i class="fa fa-paper-plane" aria-hidden="true"></i> Enregistrer
