--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -80,7 +80,7 @@
     {% block body %}
         <div class="row">
             <div id="main" class="col-sm-9">
-                {#{{ include('default/_flash_messages.html.twig') }}#}
+                {{ include('default/_flash_messages.html.twig') }}
 
                 {% block main %}{% endblock %}
             </div>
