add student infos and use ParamConverter

--- a/templates/manager/index.html.twig
+++ b/templates/manager/index.html.twig
@@ -20,7 +20,7 @@
                 <td>{{ student.lastName }}</td>
                 <td>
                     <a href="{{ path('manager_student_marks', { studentId: student.id }) }}" class="btn btn-default">Consulter les résultats</a>
-                    <a href="{{ path('manager_academic_transcript', { studentId: student.id }) }}" class="btn btn-default">Syntèse de résultats</a>
+                    <a href="{{ path('manager_academic_transcript', { id: student.id }) }}" class="btn btn-default">Syntèse de résultats</a>
                 </td>
             </tr>
         {% else %}
