--- a/templates/manager/index.html.twig
+++ b/templates/manager/index.html.twig
@@ -19,7 +19,7 @@
                 <td>{{ student.firstName }}</td>
                 <td>{{ student.lastName }}</td>
                 <td>
-                    <a href="{{ path('manager_student_marks', { studentId: student.id }) }}" class="btn btn-default">Consulter les résultats</a>
+                    <a href="{{ path('manager_student_marks', { id: student.id }) }}" class="btn btn-default">Consulter les résultats</a>
                     <a href="{{ path('manager_academic_transcript', { id: student.id }) }}" class="btn btn-default">Syntèse de résultats</a>
                 </td>
             </tr>
