--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,39 +36,13 @@
 
                         {% block header_navigation_links %}
                             <li>
-                                <a href="">
-                                    <i class="fa fa-home" aria-hidden="true"></i> menu.homepage
-                                </a>
+                                <a href="{{ path('manager_index') }}">Accueil</a>
                             </li>
 
-                            {% if is_granted('ROLE_ADMIN') %}
-                                <li>
-                                    <a href="">
-                                        <i class="fa fa-lock" aria-hidden="true"></i> menu.admin
-                                    </a>
-                                </li>
-                            {% endif %}
-                        {% endblock %}
-
-                        <li>
-                            <a href=""> <i class="fa fa-search"></i> menu.search</a>
-                        </li>
-
-                        {% if app.user %}
                             <li>
-                                <a href="">
-                                    <i class="fa fa-sign-out" aria-hidden="true"></i> menu.logout
-                                </a>
+                                <a href="{{ path('admin') }}">Admin</a>
                             </li>
-                        {% endif %}
-
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="locales">
-                                <i class="fa fa-globe" aria-hidden="true"></i>
-                                <span class="caret"></span>
-                                <span class="sr-only">menu.choose_language</span>
-                            </a>
-                        </li>
+                        {% endblock %}
                     </ul>
                 </div>
             </div>
