--- a/templates/manager/student_marks.html.twig
+++ b/templates/manager/student_marks.html.twig
@@ -10,6 +10,7 @@
     <table class="table">
         <thead>
             <tr>
+                <th title="date de passage de l'épreuve">Le</th>
                 <th>Matière</th>
                 <th>Domaine</th>
                 <th>Coefficient</th>
@@ -20,6 +21,7 @@
         </thead>
         {% for mark in student.marks %}
             <tr class="{% if mark.value < 7 %}danger{% endif %}">
+                <td>{{ mark.date|date('d/m/Y') }}</td>
                 <td>{{ mark.subject.label }}</td>
                 <td>{{ mark.subject.domain.label }}</td>
                 <td>{{ mark.subject.coefficient }}</td>
