--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -72,6 +72,7 @@
     <footer>
         <div class="container">
             <div class="row">
+                <p><a href="https://github.com/pierreboissinot/mark-manager">Github</a></p>
             </div>
         </div>
     </footer>
