--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,9 @@
 
             <div id="sidebar" class="col-sm-3">
                 {% block sidebar %}
-
+                    <div class="section">
+                        <button class="btn btn-lg btn-block btn-primary" id="tour">Lancer la demo</button>
+                    </div>
                 {% endblock %}
             </div>
         </div>
